@@ -23,6 +23,11 @@ try:
     have_gtksourceview = True
 except ImportError:
     have_gtksourceview = False
+try:
+    import gconf
+    have_gconf = True
+except ImportError:
+    have_gconf = False
 
 import bzrlib
 
@@ -95,6 +100,8 @@ class DiffWindow(gtk.Window):
             self.buffer = gtksourceview.SourceBuffer()
             slm = gtksourceview.SourceLanguagesManager()
             gsl = slm.get_language_from_mime_type("text/x-patch")
+            if have_gconf:
+                self.apply_gedit_colors(gsl)
             self.apply_colordiff_colors(gsl)
             self.buffer.set_language(gsl)
             self.buffer.set_highlight(True)
@@ -171,6 +178,69 @@ class DiffWindow(gtk.Window):
         s = StringIO()
         show_diff_trees(self.parent_tree, self.rev_tree, s, specific_files)
         self.buffer.set_text(s.getvalue().decode(sys.getdefaultencoding(), 'replace'))
+
+    @staticmethod
+    def apply_gedit_colors(lang):
+        """Set style for lang to that specified in gedit configuration.
+
+        This method needs the gconf module.
+        
+        :param lang: a gtksourceview.SourceLanguage object.
+        """
+        GEDIT_SYNTAX_PATH = '/apps/gedit-2/preferences/syntax_highlighting'
+        GEDIT_LANG_PATH = GEDIT_SYNTAX_PATH + '/' + lang.get_id()
+
+        client = gconf.client_get_default()
+        client.add_dir(GEDIT_LANG_PATH, gconf.CLIENT_PRELOAD_NONE)
+
+        for tag in lang.get_tags():
+            tag_id = tag.get_id()
+            gconf_key = GEDIT_LANG_PATH + '/' + tag_id
+            style_string = client.get_string(gconf_key)
+
+            if style_string is None:
+                continue
+
+            # function to get a bool from a string that's either '0' or '1'
+            string_bool = lambda x: bool(int(x))
+
+            # style_string is a string like "2/#FFCCAA/#000000/0/1/0/0"
+            # values are: mask, fg, bg, italic, bold, underline, strike
+            # this packs them into (str_value, attr_name, conv_func) tuples
+            items = zip(style_string.split('/'), ['mask', 'foreground',
+                'background', 'italic', 'bold', 'underline', 'strikethrough' ],
+                [ int, gtk.gdk.color_parse, gtk.gdk.color_parse, string_bool,
+                    string_bool, string_bool, string_bool ]
+            )
+
+            style = gtksourceview.SourceTagStyle()
+
+            # XXX The mask attribute controls whether the present values of
+            # foreground and background color should in fact be used. Ideally
+            # (and that's what gedit does), one could set all three attributes,
+            # and let the TagStyle object figure out which colors to use.
+            # However, in the GtkSourceview python bindings, the mask attribute
+            # is read-only, and it's derived instead from the colors being
+            # set or not. This means that we have to sometimes refrain from
+            # setting fg or bg colors, depending on the value of the mask.
+            # This code could go away if mask were writable.
+            mask = int(items[0][0])
+            if not (mask & 1): # GTK_SOURCE_TAG_STYLE_USE_BACKGROUND
+                items[2:3] = []
+            if not (mask & 2): # GTK_SOURCE_TAG_STYLE_USE_FOREGROUND
+                items[1:2] = []
+            items[0:1] = [] # skip the mask unconditionally
+
+            for value, attr, func in items:
+                try:
+                    value = func(value)
+                except ValueError:
+                    warning('gconf key %s contains an invalid value: %s'
+                            % gconf_key, value)
+                else:
+                    setattr(style, attr, value)
+
+            lang.set_tag_style(tag_id, style)
 
     @staticmethod
     def apply_colordiff_colors(lang):
